# ITI_Qt

./: README.md
Task_01/: CMakeLists.txt  README.md  main.cpp
Task_02/: CMakeLists.txt  README.md  main.cpp
Task_03/CapsLock/: CMakeLists.txt  CapsLockPage.qml  Main.qml  README.md  capslock.cpp  capslock.h  main.cpp  resources.qrc
